--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -33,7 +33,7 @@ $font-color: #d9d9d9;
 
 $primary-color: #eda314;
 $secondary-color: #cc6600;
-$tertiary-color: #304F6C;
+$tertiary-color: #3797aa;
 $link-color: $primary-color;
 
 $bad-color: #ce214d; // Bad color for errors, validation etc.
