Fix feature image bg.

--- a/assets/scss/breakpoints/_800up.scss
+++ b/assets/scss/breakpoints/_800up.scss
@@ -161,7 +161,7 @@ POST STYLING
 		margin-top: 2rem;
 
 		&:before {
-			background: white;
+			background: $body-color;
 			content: "";
 			display: block;
 			width: 100%;
